# dissertation-fl-offloading-ns3

./: .gitignore  Downloads  Downloads.pub  FULL_GUIDE.md  README.md  python_server.py  requirements.txt
KF7029_FINAL_IMPLEMENTATION/: README.md  diagnose_gpu.py  gpu_test_result.txt  installed_packages.txt  main.py  nvidia_info.txt  requirements.txt  test_basic.py  test_gpu.py  test_quick.py  test_sfea.py  test_structure.py  torch_check.txt  validate.py
baseline/: BASELINE_SUMMARY.md  README.md  federated_client.cc  fl_dqn_model.pth  fl_server.py  fl_server_with_dqn.py  replay_buffer.py  requirements.txt  simple_dqn.py  test_client.py
configs/: exp1_comm_efficiency.yaml  exp2_performance_tradeoff.yaml  exp3_scalability.yaml  reward_energy_latency.yaml  sim_default.yaml  topk_sweep.yaml
dissertation-fl-offloading-ns3-v2/: FULL_GUIDE.md  README.md
docs/: ARCHITECTURE.md  ENERGY_METHOD.md  REPRODUCIBILITY.md
ns3_module/: CMakeLists.txt
ns3_module/data/raw_logs/: link_bytes.csv  radio_energy.csv
ns3_module/examples/: run_mec_scenario.cc
ns3_module/include/: bridge-client.h  energy-tracker.h  logging-helper.h  mec-sim.h  offload-app.h  task-generator.h
ns3_module/scripts/: build_ns3_module.ps1  build_ns3_module.sh  run_ns3.ps1  run_ns3.sh
ns3_module/src/: bridge-client.cc  energy-tracker.cc  logging-helper.cc  mec-sim.cc  offload-app.cc  task-generator.cc
ns3_scripts/: cosim-ping-pong.cc
python/: dqn_agent.py  replay_buffer.py  requirements.txt  server.py
scripts/: compute_exp1_tables.py  env_baseline.sh  env_sfea.sh  publish_to_github.sh  run_exp2.sh  (+9 more)
(+142 files in other folders)
